# pico-lua

./: .gitignore  .luarc.json  README.md  README.old.md  build.sh  build_example.sh  convert_lua.sh  deps.sh  env.src  flash.sh  get_lua.sh  get_pico_examples.sh  get_pico_sdk.sh  get_pico_ssd.sh  get_picotool.sh  minicom.sh  patch_lua.sh  picolua.h  picolua_patch.sh  script.lua  send_serial.sh
examples/lua_exp/: example.lua  exit.lua  seconds.lua  simple.lua  slow.lua  tick_time.lua  time_test.lua
examples/test_program/: CMakeLists.txt  build.sh  env.src  flash.sh  get_pico_sdk.sh  get_picotool.sh  main.cpp
examples/test_program/build.old/: CMakeCache.txt  Makefile  cmake_install.cmake  test.dis  test.elf  test.elf.map  test.hex  test.uf2
examples/test_program/build.old/pico-sdk/: Makefile  cmake_install.cmake
examples/test_program/build.old/pico-sdk/docs/: Makefile  cmake_install.cmake
examples/test_program/build.old/pico-sdk/src/: Makefile  (+1 more)
examples/test_program/picolua/: picolua.h
examples/test_program/picolua/lua_h/: pico.lua.h  tools.lua.h
lua_exp/: example.lua  exit.lua  lightshow.lua  simple.lua  slow.lua  time_test.lua
lua_patch/: Makefile.rp2350  loslib.c
lua_patches/: loslib.c
lua_src/: default.lua  handler.lua  pico.lua  script.lua  system.lua  tools.lua
lua_src_exp/: example.lua
lua_src_sys/: handler.lua  tools.lua
lua_src_usr/: default.lua  script.lua
lua_test/: script.lua.h  test.c
picolua/: picolua.h
picolua/lua_src/: pico.lua  tools.lua
test/: CMakeLists.txt
test_program/: CMakeLists.old.txt  CMakeLists.txt  flash.h  main.cpp  picolua.h  test.c  test.cpp
test_program/lua/: README.md  handler.lua.h  script.lua.h  tools.lua.h
test_program/picolua/: README.md  picolua.h
test_program/picolua/lua/: default.lua.h  handler.lua.h  pico.lua.h  system.lua.h  tools.lua.h
(+201 files in other folders)
